// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StealthCopiable should renders correctly 1`] = `
<DocumentFragment>
  .cache-ctqwnz-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ctqwnz-StyledContainer:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-tfavmx-StyledContent {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-sgvjbq-UnselectableSpan {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1tqdb6w-CopyButton {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1tqdb6w-CopyButton:focus {
  opacity: 1;
}

<div
    class="cache-ctqwnz-StyledContainer elgyjs71"
  >
    <span
      class="cache-tfavmx-StyledContent elgyjs70"
    >
      Hello
    </span>
    <span
      class="cache-sgvjbq-UnselectableSpan elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-1tqdb6w-CopyButton elgyjs73"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with a complex children 1`] = `
<DocumentFragment>
  .cache-ctqwnz-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ctqwnz-StyledContainer:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-sgvjbq-UnselectableSpan {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1tqdb6w-CopyButton {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1tqdb6w-CopyButton:focus {
  opacity: 1;
}

.cache-tfavmx-StyledContent {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="cache-ctqwnz-StyledContainer elgyjs71"
  >
    <span
      class="cache-sgvjbq-UnselectableSpan elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-1tqdb6w-CopyButton elgyjs73"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <span
      class="cache-tfavmx-StyledContent elgyjs70"
    >
      <div>
        <span>
          Hello
        </span>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 1`] = `
<DocumentFragment>
  .cache-ctqwnz-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ctqwnz-StyledContainer:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-sgvjbq-UnselectableSpan {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1tqdb6w-CopyButton {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1tqdb6w-CopyButton:focus {
  opacity: 1;
}

.cache-tfavmx-StyledContent {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="cache-ctqwnz-StyledContainer elgyjs71"
  >
    <span
      class="cache-sgvjbq-UnselectableSpan elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-1tqdb6w-CopyButton elgyjs73"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
    <span
      class="cache-tfavmx-StyledContent elgyjs70"
    >
      Hello
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 2`] = `
<DocumentFragment>
  .cache-ctqwnz-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-width: 0;
}

.cache-ctqwnz-StyledContainer:hover .elgyjs73 {
  opacity: 1;
  cursor: pointer;
}

.cache-sgvjbq-UnselectableSpan {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1tqdb6w-CopyButton {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1tqdb6w-CopyButton:focus {
  opacity: 1;
}

.cache-tfavmx-StyledContent {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="cache-ctqwnz-StyledContainer elgyjs71"
  >
    <span
      class="cache-sgvjbq-UnselectableSpan elgyjs72"
    >
      <button
        aria-live="polite"
        class="cache-1tqdb6w-CopyButton elgyjs73"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <span
      class="cache-tfavmx-StyledContent elgyjs70"
    >
      Hello
    </span>
  </div>
</DocumentFragment>
`;
